Text in dark mode wasn't changing when updated - fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -49,12 +49,9 @@ p {
 
 .Hero-text h1 {
 font-size: 42pt;
-color: black;
 }
 
-.Hero-text p {
-  color: black;
-}
+
 
 .intro {
   width: 100vw;
